<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <Button
        android:text="@string/back"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:textColor="#999999"
        android:id="@+id/back_button2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_name"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="12sp"
        android:textSize="18sp"
        android:id="@+id/textView7" />

    <EditText
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:text="@string/list"
        android:ems="10"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/item7"
        style="@style/Widget.AppCompat.EditText"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:text="@string/create_list"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="15sp"
            android:background="#00FF00"
            android:id="@+id/create_list_button" />

        <Button
            android:text="@string/delete_list"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="15sp"
            android:background="#FF2200"
            android:id="@+id/delete_list_button" />

    </LinearLayout>



</LinearLayout>
