<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:text="@string/symbol1"
            android:layout_marginStart="310dp"
            android:textSize="48sp"
            android:textColor="#999999"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:id="@+id/create_button"
            android:layout_alignParentEnd="true"
            style="@android:style/Widget.Button" />

        <Button
            android:text="@string/symbol2"
            android:textSize="48sp"
            android:textColor="#999999"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:id="@+id/back_button"
            style="@android:style/Widget.Button"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/symbol3"
            android:textSize="48sp"
            android:textColor="#999999"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:id="@+id/next_button"
            style="@android:style/Widget.Button"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/back_button" />

        <TextView
            android:text="@string/list_name"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_width="170sp"
            android:layout_height="70sp"
            android:layout_centerVertical="true"
            android:id="@+id/list_name"
            android:layout_toEndOf="@+id/next_button" />

    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="a10593699.uvu.edu.project3_cb.list_manager"
        android:layout_height="314dp"
        android:layout_weight="1.50">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:text="@string/query_button"
            android:layout_height="60sp"
            android:textColor="#999999"
            android:id="@+id/query_button"
            android:layout_width="90sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            style="@android:style/Widget.Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:layout_width="115sp"
            android:layout_height="60sp"
            android:inputType="textPersonName"
            android:text="@string/query"
            android:ems="10"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/item5"
            style="@android:style/Widget.EditText"
            android:selectAllOnFocus="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/item6"
            android:layout_marginEnd="17dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <EditText
            android:layout_width="115sp"
            android:layout_height="70sp"
            android:inputType="textPersonName"
            android:text="@string/query2"
            android:ems="10"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/item6"
            style="@android:style/Widget.EditText"
            android:selectAllOnFocus="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:text="@string/options_button"
            android:layout_height="60sp"
            android:id="@+id/options_button"
            android:textColor="#999999"
            android:layout_width="90sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            style="@android:style/Widget.Button"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </RelativeLayout>
</LinearLayout>